--- a/views/Sidebar.ejs
+++ b/views/Sidebar.ejs
@@ -1,23 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="/dist/output.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="/dist/Sidebar.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
-</head>
-<body class="h-[100vh]" >
+<section class="h-[100vh]" >
     <main id="main"  class="w-[5vw] font-semibold  duration-1000" >
         <div class=" flex flex-col gap-3 ">
              <div class=" flex items-center justify-center gap-24 " >
                 <img class="arrow "  onclick="Slide()" width="80" src="/images/Gifted-Brainz-PNG (2).png" alt="">
-                <img class=" hidden  cursor-pointer" width="20" src="/images/Vector (3).png" alt="">
+                <img class=" cursor-pointer" width="20" src="/images/Vector (3).png" alt="">
              </div>
         <div class=" flex flex-col gap-5 items-start">
             <div class="side flex bg-[#5852FE] items-center  w-[100%] gap-2 py-[10px]  ">
@@ -43,21 +29,5 @@
         </div>
         </div>
     </main>
-  <script>
-       
-        var arrow = document.querySelector('.arrow')
-        var every = document.querySelectorAll('#main')
-        arrow.addEventListener('click', ()=>{
-         every.forEach(function(all){
-                if(all.style.width === '5vw' || all.style.width === ''  ){
-                    all.style.width = '13vw'
-                }else{
-                    all.style.width = '5vw'
-                }
-            })
-            
-        })
-        
-    </script>
-</body>
-</html>
+  </section>
+  <script src="/js/sidebar.js"></script>
