--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/dist/Signup.css">
-    <link rel="stylesheet" href="/dist/output.css">
+    <link rel="stylesheet" href="css/Signup.css">
+    <link rel="stylesheet" href="css/output.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
