--- a/views/Referrals.ejs
+++ b/views/Referrals.ejs
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="./output.css">
-        <link rel="stylesheet" href="./Referrals.css">
+        <link rel="stylesheet" href="./css/output.css">
+        <link rel="stylesheet" href="./css/Referrals.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
