--- a/public/css/Dashboard.css
+++ b/public/css/Dashboard.css
@@ -5,7 +5,8 @@
 }
 body{
     display: flex;
-    width: 100%;
+    /* justify-content: center;
+    width: 100%; */
 }
 .dash{
     gap: 100px;
@@ -13,6 +14,10 @@ body{
 input{
     height: 5vh;
     outline: none;
+}
+.flex{
+    display: flex;
+    gap: 30px;
 }
 .tote{
 background-color: #5852FE;
