--- a/public/css/Sidebar.css
+++ b/public/css/Sidebar.css
@@ -1,22 +1,261 @@
-.side{
-    /* padding-left: 25px; */
-    
-    gap: 29px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Fire Sans',sans-serif;
 }
-.sidee{
-    padding-left: 22px;
-    gap: 29px;
-}
-h2{
-    white-space: nowrap; 
-    
-}
-main{
-    width: 10vw;
-    overflow-x: hidden;
-}
-body{
+
+.app{
     display: flex;
     width: 100%;
-    /* gap: 400px; */
+    min-height: 100vh;
+    background-color: firebrick;
+}
+
+.sidebar{
+    flex: 1 1 0;
+    max-width: 250px;
+    padding: 2rem 1rem;
+    background-color: #fff;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    height: 100%;
+    transition: var(--trans-05);
+    /* background-color: lawngreen; */
+}
+
+.sidebar.close{
+    width: 89px;
+}
+
+.sidebar.close a{
+    opacity: 0;
+} 
+.sidebar.close img{
+    width: 90px;
+}
+nav{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.brain{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+.n_b{
+   width: 30%; 
+}
+
+.arrow{
+    width: 20px;
+    height: 20px;
+}
+.sidebar.close.arrow{
+    display: none;
+}
+.sidebar h3{
+    color: grey;
+    font-size: 0.75rem;
+    padding: 1.5em;
+    margin-bottom: 0.5em;
+}
+
+.dash1{
+    background-color: #5852FE;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    gap: 10px;
+    width: 100%;
+    color: white;
+}
+
+.dash1 img{
+    width: 20%;
+}
+
+.run {
+    display: flex;
+    align-items: center;
+    /* background-color: white; */
+    padding-left: 20px;
+    color: white;
+    /* justify-content: center; */
+    gap: 10px;
+    width: 100%;
+}
+.runn {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    color: white;
+    /* justify-content: center; */
+    gap: 10px;
+    width: 100%;
+}
+.imgr{
+    width: 12%;
+}
+.run:hover{
+    background-color: #5852FE;
+    color: white;
+}
+ 
+.imaging{
+    width: 13%;
+    
+}
+.menu{
+    margin: o -1rem;
+}
+
+.item{
+    display: block;
+    padding: 0.5em;
+    color: black;
+    text-decoration: none;
+    transition: 0.2s linear;
+}
+
+.item1{
+    display: block;
+    padding: 0.5em;
+    color: white;
+    text-decoration: none;
+    transition: 0.2s linear;
+}
+.item:hover, .item.is-active{
+    background-color: #5852FE;
+    border-right: 5px solid #5852FE;
+    color: white;
+}
+
+.new{
+    background-color: #5852FE;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 10px;
+}
+
+.content{
+    flex: 1 1 0;
+    padding: 2rem;
+}
+
+.content h1{
+    color: #3c3f58;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+.content p{
+    color: #707793;
+}
+
+.menu-toggle{
+    display: none;
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    width: 60px;
+    height: 60px;
+    border-radius: 99px;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.hamburger{
+    position: relative;
+    top: calc(50% - 2px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 32%;
+}
+
+.hamburger > span,
+.hamburger > span::before,
+.hamburger > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 99px;
+    background-color: #0f0f0f;
+    transition-duration: .25s;
+}
+
+.hamburger > span::before{
+    content: '';
+    top: 8px;
+}
+
+.hamburger > span::after{
+    content: '';
+    top: -8px;
+}
+
+.menu-toggle.is-active .hamburger > span{
+    transform: rotate(45deg);
+}
+
+.menu-toggle.is-active .hamburger > span::before{
+    top: 0;
+    transform: rotate(0deg);
+}
+
+.menu-toggle.is-active .hamburger > span::after{
+    top: 0;
+    transform: rotate(90deg);
+}
+
+@media screen and (max-width: 1024px) {
+    .sidebar{
+        max-width: 200px;
+    }
+    .sidebar.close{
+        /* display: none; */
+    }
+    .arrow{
+        display: none;
+    }
+    .sidebar.close a{
+        opacity: 1;
+    } 
+}
+
+@media screen and (max-width: 768px) {
+    .menu-toggle{
+        display: block;
+    }
+    .sidebar.close a{
+        opacity: 1;
+    } 
+    .content{
+        padding-top: 8rem;
+    }
+    .arrow{
+        display: none;
+    }
+    .sidebar.close{
+        /* display: none; */
+    }
+    .sidebar{
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -300px;
+        height: 100vh;
+        width: 100%;
+        max-width: 300px;
+        transition: 0.2s linear;
+    }
+    .sidebar.is-active{
+        left: 0;
+    }
 }
