--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -9,6 +9,7 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet" href="/css/Sidebar.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/Gifted-Brainz-PNG (1).png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
