--- a/public/css/Quizpage.css
+++ b/public/css/Quizpage.css
@@ -3,16 +3,13 @@
     margin: 0%;
     box-sizing: border-box;
 }
-body{
-    width: 100%;
- 
-    height: 100vh;
+
+section{
     display: flex;
-    flex-direction: column;
     gap: 30px;
-    /* padding-top: 30px; */
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100vh;
+
 }
 .top{
     display: flex;
@@ -68,11 +65,17 @@ body{
     gap: 50px;
     align-items: center;
 }
-.upp{
+.up{
     background-color: rgb(235, 234, 234);
     height: 35vh;
     width: 60vw;
     border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.up h1{
+    font-size: 41px;
 }
 .ddown{
     height: 10vh;
