--- a/views/SpintheWheel.ejs
+++ b/views/SpintheWheel.ejs
@@ -63,7 +63,9 @@
         spinBtn.onclick = function(){
             wheel.style.transform = "rotate(" + value + "deg)"  
             value += Math.ceil(Math.random() * 3600);
+            alert(value)
         }
+        
     </script>
 </body>
 </html>
