--- a/views/Sidebar.ejs
+++ b/views/Sidebar.ejs
@@ -24,40 +24,39 @@
             <div class="dash1">
                 <img src="/images/Dashboard.png" alt="">
 
-                <a href="">Dashboard</a>
+                <a href="dashboard">Dashboard</a>
             </div>
 
             <nav>
                 <div class="run">
                     <div class="imaging"><img src="/images/Running.png" alt=""></div>
-
-                    <a href="" class="item">Quiz Competition</a>
+                    <a href="quizPage" class="item">Quiz Competition</a>
                 </div>
 
                 <div class="run">
                     <div class="imgr"><img src="/images/Group 33.png" alt=""></div>
                     
-                    <a href="" class="item">Quiz Leaderboard</a>
+                    <a href="leaderboard" class="item">Quiz Leaderboard</a>
                 </div>
 
                 <div class="run">
                     <img class="imgr" src="/images/RGB Color Wheel.png" alt="">
-                    <a href="" class="item">Spin to Win</a>
+                    <a href="spin" class="item">Spin to Win</a>
                 </div>
 
                 <div class="run">
                     <img class="imgr" src="/images/Graduation Cap.png" alt="">
-                    <a href="" class="item">Courses</a>
+                    <a href="coursePage" class="item">Courses</a>
                 </div>
 
                 <div class="run">
                     <img class="imgr" src="/images/Bank Cards.png" alt="">
-                    <a href="" class="item">Payment</a>
+                    <a href="payment" class="item">Payment</a>
                 </div>
 
                 <div class="run">
                     <img class="imgr" src="/images/Collaboration Female Male.png" alt="">
-                    <a href="" class="item">Referral History</a>
+                    <a href="referral" class="item">Referral History</a>
                 </div>
 
                 <div class="run">
@@ -74,12 +73,12 @@
 
                 <div class="runn">
                     <img class="imgr" src="/images/Group 35.png" alt="">
-                    <a href="" class="item1">Get Help</a>
+                    <a href="getsupport" class="item1">Get Help</a>
                 </div>
 
                 <div class="runn">
                     <img class="imgr" src="/images/Group 36.png" alt="">
-                    <a href="" class="item1">Community</a>
+                    <a href="gethelp" class="item1">Community</a>
                 </div>
             </nav>
         </aside>
