--- a/views/Sidebar.ejs
+++ b/views/Sidebar.ejs
@@ -20,50 +20,50 @@
         <nav class="sidebar-menu">
           <button type="button" class="nav_link active">
             <img src="/images/Dashboard (1).png" />
-            <span>Dashboard</span>
+            <a href="/dashboard"><span class="nav_link">Dashboard</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button">
             <img src="/images/Group 31.png" />
-            <span>Quiz competition</span>
+            <a href="/CreateQuiz"><span class="nav_link">Quiz competition</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button" >
             <img src="/images/Group 33.png" />
-            <span>Quiz Leaderboard</span>
+            <a href="/leaderboard"><span class="nav_link">Quiz Leaderboard</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button">
             <img src="/images/RGB Color Wheel.png" />
-            <span>Spin To Win</span>
+            <a href="/spinWheel"><span class="nav_link">Spin To Win</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button">
             <img src="/images/Graduation Cap.png" />
-            <span>Courses</span>
+            <a href="/Coursepage"><span class="nav_link">Courses</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button">
             <img src="/images/Bank Cards.png" />
-            <span>Payment</span>
+            <a href="/Payment"> <span class="nav_link">Payment</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button">
             <img src="/images/Collab.png" />
-            <span>Referrals History</span>
+            <a href="/referral"><span class="nav_link">Referrals History</span></a>
           </button>
-          <button type="button" class="nav_link">
+          <button type="button" >
             <img src="/images/Order History.png" />
-            <span>Earnings History</span>
+            <a href="/earning"><span class="nav_link">Earnings History</span></a>
           </button>
           
         </nav>
         <div class="down">
           <button type="button">
             <img src="/images/Group 34.png" />
-            <span>Settings</span>
+            <a href="/Settings"><span>Settings</span></a>
           </button>
           <button type="button" >
             <img src="/images/Group 35.png" />
-            <span>Get help</span>
+            <a href="/GetSupport"><span>Get help</span></a>
           </button>
           <button type="button">
             <img src="/images/Group 36.png" />
-            <span>Community</span>
+            <a href="/GetHelp"><span>Community</span></a>
           </button>
         </div>
       </div>
