--- a/public/css/SpintheWheel.css
+++ b/public/css/SpintheWheel.css
@@ -36,7 +36,7 @@ body{
     /* width: 70px; */
     /* background-color: #f00; */
 }
-.container .spinBtn{
+.container #spinBtn{
     position: absolute;
     width: 60px;
     height: 40px;
@@ -53,7 +53,7 @@ body{
 
 }
 
-.container .wheel{
+.container #wheel{
     position: absolute;
     top: 0;
     left: 0;
@@ -65,7 +65,7 @@ body{
     border: 20px solid;
     transition: transform 5s ease-in-out;
 }
-.container .wheel .number{
+.container #wheel .number{
     position: absolute;
     width: 50%;
     height: 50%;
@@ -80,7 +80,7 @@ body{
     cursor: pointer;
 
 }
-.container .wheel .number span{
+.container #wheel .number span{
     position: relative;
     transform: rotate(45deg);
     font-size: 20px;
